added database connection string

--- a/BeeBuzz/appsettings.json
+++ b/BeeBuzz/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Beehive;Trusted_Connection=true;MultipleActiveResultSsets=true;Integrated Security=true;Connect TImeout=30"
+  }
   "AllowedHosts": "*"
 }
