did repos, created repo method for users and beehives in org, made entities, added identity middleware, just have to seed data and do register page

--- a/BeeBuzz/appsettings.json
+++ b/BeeBuzz/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Beehive;Trusted_Connection=true;MultipleActiveResultSsets=true;Integrated Security=true;Connect TImeout=30"
-  }
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BeeBuzz;Trusted_Connection=true;MultipleActiveResultSets=true;Integrated Security=true;Connect TImeout=30"
+  },
   "AllowedHosts": "*"
 }
